Fixing spacing issues

--- a/css-dev/admin.scss
+++ b/css-dev/admin.scss
@@ -5,18 +5,20 @@
 	}
 	// Active styles
 	input:checked + label::after {
-		border: 4px solid #288DBB;
+		border: 4px solid #288dbb;
 		margin: 0;
 	}
 }
+
 %admin-sprite-label {
 	display: inline-block;
 	font-size: 0;
 	height: auto;
 	width: auto;
 }
+
 %admin-sprite-background {
-	background: url("admin_sprite.png") no-repeat 0 0 transparent;
+	background: url( "admin_sprite.png" ) no-repeat 0 0 transparent;
 	content: "";
 	display: block;
 	margin: 4px;
@@ -42,6 +44,7 @@
 		&[for="burf_setting_layout_default"]::after {
 			background-position: 0 0px;
 		}
+
 		&[for="burf_setting_layout_topNav"]::after {
 			background-position: 0 -150px;
 		}
